Revert "Import files"
This reverts commit 3c71c4e03fc622e48a7eef8677dd890072af1ab8.

Reason for revert: b/410490681

Bug: 203426354
Change-Id: I441305ecb2784a8c5292fa7e5bbc68ce6c61753c